tests/NormalTests/paczka1/fuzzy1/72423959.err
Error in line 3: 5WHhk A424 57,52
Error in line 5: YaZ38mW0hrO A424 51,2
Error in line 4: 5WHhk A424 91,5
Error in line 24: A131 A424 33,2
Error in line 31: hFc0COEo4xf A131 23,6
